tests/invalid/const_no_init.c
int main() {
    const int x;
    return 0;
}
